@startuml Strategy Pattern - ElementarClash

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam class {
    BackgroundColor<<Strategy>> #FFF9C4
    BorderColor<<Strategy>> #F9A825
    BackgroundColor<<ConcreteStrategy>> #BBDEFB
    BorderColor<<ConcreteStrategy>> #1565C0
    BackgroundColor<<Context>> #DCEDC8
    BorderColor<<Context>> #558B2F
}

abstract class Unit <<Context>> {
    - movementStrategy: MovementStrategy
    - attackStrategy: AttackStrategy
    __
    + getMovementStrategy(): MovementStrategy
    + getAttackStrategy(): AttackStrategy
    # setMovementStrategy(strategy: MovementStrategy): void
    # setAttackStrategy(strategy: AttackStrategy): void
}

interface MovementStrategy <<Strategy>> {
    + calculateMovementCost(terrain: Terrain): double
    + canMoveTo(game: Game, current: Position, target: Position, maxMovement: int): boolean
}

class GroundMovementStrategy <<ConcreteStrategy>> {
    - faction: Faction
    __
    + GroundMovementStrategy(faction: Faction)
    + calculateMovementCost(terrain: Terrain): double
    + canMoveTo(game: Game, current: Position, target: Position, maxMovement: int): boolean
    - applyFireModifiers(terrain: Terrain, baseCost: double): double
    - applyWaterModifiers(terrain: Terrain, baseCost: double): double
    - applyEarthModifiers(terrain: Terrain, baseCost: double): double
}

interface AttackStrategy <<Strategy>> {
    + canAttack(game: Game, attacker: Unit, target: Unit): boolean
    + {default} calculateBaseDamage(attacker: Unit, target: Unit): int
    + getAttackRange(unit: Unit): int
}

class RangedAttackStrategy <<ConcreteStrategy>> {
    - ignoresForestDefense: boolean
    __
    + RangedAttackStrategy(ignoresForestDefense: boolean)
    + canAttack(game: Game, attacker: Unit, target: Unit): boolean
    + getAttackRange(unit: Unit): int
    - hasLineOfSight(game: Game, from: Position, to: Position): boolean
}

class FlameArcher <<Context>> {
    + FlameArcher(id: String, stats: UnitStats)
}

MovementStrategy <|.. GroundMovementStrategy

AttackStrategy <|.. RangedAttackStrategy

Unit o-- "1" MovementStrategy : movement
Unit o-- "1" AttackStrategy : attack

Unit <|-- FlameArcher

FlameArcher ..> GroundMovementStrategy : <<creates>>
FlameArcher ..> RangedAttackStrategy : <<creates>>

@enduml
